# ECE421-Projects

./: .gitignore  README.md
Connect4-with-TootandOtto/: app.js  package-lock.json
Connect4-with-TootandOtto/backend/src/: connect4.rs  main.rs  toot_and_otto.rs
Javaproject/project1/: .project
Javaproject/project1/src/: APIFinance.java  Main.java  ShareInfo.java  ShareUtil.java  Shares.java
project1/: APIFinance.java  ECE 421 Project 1.docx  Main.java  PickShareFunctional.java  ShareUtil.java
project1/.metadata/: version.ini
project1/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
project1/.metadata/.plugins/org.eclipse.jdt.core/: 1865797976.index  3540839101.index  externalLibsTimeStamps  savedIndexNames.txt
project1/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
project1/project1/src/: Main.java  PickShareFunctional.java
project1/project1/src/project1/: APIFinance.java  (+5 more)
project2/: Cargo.toml
project2/benches/: my_benchmark.rs
project2/src/: avl.rs  cli.rs  main.rs  node.rs  rb.rs
project3/: Cargo.toml  Readme.md
project3/backend/: Cargo.toml
project3/backend/src/: connect4.rs  main.rs  mod.rs  toot_and_otto.rs
project3/cli/: Cargo.toml
project3/cli/src/: connect4.rs  main.rs  toot_and_otto.rs
project3/common/: Cargo.toml
project3/common/src/: lib.rs
project3/server/: .env  Cargo.toml  docker-compose.yml
project3/server/src/: db.rs  error.rs  handler.rs  main.rs  model.rs  response.rs  schema.rs
project3/web/: Cargo.toml  LICENSE_MIT  index.html  styles.css
project3/web/src/: MainPage.rs  api.rs  howToPlayTooT.rs  lib.rs  main.rs  mod.rs  router.rs  try.rs
project3/web/src/component/: disc.rs  game_difficulty.rs  mod.rs  player.rs
project3/web/src/controller/: canvas_controller.rs
project3/web/src/pages/: TootOtto.rs  connect4.rs  connect4_computer.rs  game_history.rs  howToPlayConnect4.rs  howToPlayTooT.rs  how_to_play_connect4.rs  how_to_play_toototto.rs  mainPage.rs  main_page.rs  mod.rs  score_board.rs  tootOtto_computer.rs
(+10 files in other folders)
