[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
mongodb = { version = "2.4.0", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.159", features = ["derive"] }
