[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
mongodb = { version = "2.4.0", features = ["bson-chrono-0_4"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
warp = "0.3.4"
yew = "0.19.3"
common = { version = "0.1.0", path = "../common" }

[lib]
name = "server"
path = "src/mod.rs"
crate-type = ["lib"]