[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = {path = "../server" }
backend = { path = "../backend" }
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
rand = "0.8"
wasm-logger = "0.2"
yew = "0.19.3"
yew-router = "0.16.0"
rayon = "1.5.1"
wasm-bindgen = {version = "0.2.19", features = ["nightly"]}
wasm-bindgen-futures = "0.4.29"
chrono = "0.4.19"
serde = "1.0.136"
serde_json = "1.0.59"
gloo = "0.6.1"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "Window",
  "Document",
  "CanvasRenderingContext2d",
"DomRect",
]
